--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 
 /* styling for main body id = 'main' */
 #main{
-    box-shadow: 0 4px 8px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 8px 8px rgba(0, 0, 0, 0.2);
     margin-top: 50px;
     margin-left: 30px;
     margin-right: 30px;
@@ -45,4 +45,8 @@
 
 span{
     font-size: 10px;
+}
+
+.install_btn{
+    box-shadow: 5px 4px 7px 3px blue;
 }
