--- a/style.css
+++ b/style.css
@@ -50,3 +50,78 @@ span{
 .install_btn{
     box-shadow: 5px 4px 7px 3px blue;
 }
+
+/* styling for install window id = 'install_window' */
+.overlay{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(3px);
+    z-index: 5;
+}
+
+#install_window{
+    display: none;
+    position: absolute;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.to_download{
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.join_telegram{
+    height: 30px;
+    width: 250px;
+    font-weight: bold;
+    font-size: larger;
+    border-radius: 10px;
+    background-color: rgb(6, 147, 241);
+    color: white;
+    border: none;
+}
+
+.join_instagram{
+    height: 30px;
+    width: 250px;
+    font-weight: bold;
+    font-size: large;
+    border-radius: 10px;
+    background-color: rgb(244, 58, 7);
+    color: white;
+    border: none;
+}
+
+.subscribe_youtube{
+    height: 30px;
+    width: 250px;
+    font-weight: bold;
+    font-size: large;
+    border-radius: 10px;
+    background-color: red;
+    color: white;
+    border: none;
+}
+
+.download_app{
+    height: 30px;
+    width: 250px;
+    font-weight: bold;
+    font-size: large;
+    border-radius: 10px;
+    background-color: rgb(177, 171, 171);
+    color: rgb(76, 74, 74);
+    border: none;
+}
