--- a/style.css
+++ b/style.css
@@ -60,21 +60,21 @@ span{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(1px);
     z-index: 5;
 }
 
 #install_window{
-    display: block;
+    display: none;
     position: absolute;
     background-color: white;
-    border: 2px solid black;
     border-radius: 20px;
     width: 400px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 10;
 }
 
 .to_download{
