--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ span{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(1px);
     z-index: 5;
 }
 
@@ -68,13 +68,13 @@ span{
     display: none;
     position: absolute;
     background-color: white;
-    border: 2px solid black;
     border-radius: 20px;
-    width: 300px;
+    width: 400px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 10;
 }
 
 .to_download{
@@ -123,5 +123,4 @@ span{
     border-radius: 10px;
     background-color: rgb(177, 171, 171);
     color: rgb(76, 74, 74);
-    border: none;
 }
