--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body.no-scroll{
+    overflow: hidden;
+}
+
 /* styling for nav bar id = 'header' */
 #header{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -123,4 +127,23 @@ span{
     border-radius: 10px;
     background-color: rgb(177, 171, 171);
     color: rgb(76, 74, 74);
+}
+
+/* styling for download progress container and bar */
+.progress_container{
+    display: none;
+    width: 300px;
+    height: 20px;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 20px;
+    overflow: hidden;
+}
+
+.progress_bar{
+    width: 0%;
+    height: 100%;
+    background-color: blue;
+    border-radius: 10px;
+    transition: width 0.5s ease-in-out;
 }
