--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body.no-scroll{
     margin-top: 50px;
     margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 50px;
     border-radius: 20px;
 }
 
@@ -53,6 +54,17 @@ span{
 
 .install_btn{
     box-shadow: 5px 4px 7px 3px blue;
+}
+
+/* styling for footer id = 'footer' */
+#footer{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: rgb(208, 208, 208);
+    text-align: center;
+}
+
+.back_to_top{
+    margin: 10px;
 }
 
 /* styling for install window id = 'install_window' */
