--- a/style_blog.css
+++ b/style_blog.css
@@ -24,3 +24,14 @@
     margin: 10px;
     font-size: 20px;
 }
+
+/* styling for main in blog page */
+#main{
+    box-shadow: 0 5px 8px 8px rgba(0, 0, 0, 0.2);
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 50px;
+    border-radius: 20px;
+    text-align: center;
+}
