--- a/style_help.css
+++ b/style_help.css
@@ -25,12 +25,13 @@
     font-size: 20px;
 }
 
-/* styling for main body */
+/* styling for main body in help page */
 #main{
     box-shadow: 0 5px 8px 8px rgba(0, 0, 0, 0.2);
     margin-top: 50px;
     margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 50px;
     border-radius: 20px;
 }
 
