--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ span{
 
 /* styling for footer id = 'footer' */
 #footer{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 5px rgba(0, 0, 0, 0.2);
     background-color: rgb(208, 208, 208);
     text-align: center;
 }
